ghc-4335c07/testsuite/tests/typecheck/should_fail/T5570.hs
{-# LANGUAGE MagicHash #-}
module T5570 where

import GHC.Exts

main :: IO ()
main = print $ D# $ 3.0##
